<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farrt-Robot</name>
  <version>0.0.0</version>
  <description>
    The FARRT Robot uses FARRT to navigate in a partially observable world
  </description>
  <maintainer email="mgupta303@gatech.edu">Mudit Gupta</maintainer>
  <maintainer email="ichadha3@gatech.edu">Ishan Chadha</maintainer>
  <license>TODO</license>

  <author email="mgupta303@gatech.edu">Mudit Gupta</author>

  <!-- <build_depend>qt5-qmake</build_depend>
  <build_depend>qtbase5-dev</build_depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <!-- <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend> -->

  <!-- <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend> -->

  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>